# pytas

./: README.md  pyproject.toml
.github/workflows/: release.yaml
pyTAgui/: meta.yaml
