[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pytagui"
dynamic = ["version"]

description = "A python, matplotlib, and QT based GUI for transient absorption processing."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "damonturney", email = "damonturney@gmail.com"}]
dependencies = ["numpy", "os", "time", "h5py", "scipy", "matplotlib", "PyQt5", "sys"]

[tool.setuptools_scm]
write_to = "src/pytagui/_version.py"